// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cypress accessibility generator should correctly add accessibility should update the applications cypress.config.ts 1`] = `
"import { nxE2EPreset } from '@nx/cypress/plugins/cypress-preset';

import { defineConfig } from 'cypress';

export default defineConfig({
  e2e: {
    ...nxE2EPreset(__filename, { cypressDir: 'src' }),
    setupNodeEvents(on, config) {
      on('task', {
        log(message) {
          console.log(message);
          return null;
        },
        table(message) {
          console.table(message);
          return null;
        },
      });
    },
  },
});
"
`;

exports[`cypress accessibility generator should correctly update the setUpNodeEvents if it already exists 1`] = `
"export default defineConfig({
  ...baseConfig,
  e2e: {
    setupNodeEvents(on, config) {
      on('before:browser:launch', (file) => {
        //do something
      });

      on('task', {
        log(message) {
          console.log(message);
          return null;
        },
        table(message) {
          console.table(message);
          return null;
        },
      });
    },
  },
});
"
`;
